update name in index

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <p><em>Synapse ATS Sh.p.k</em></p>
             </div>
             <div class="resume-item">
-              <h4>Studio 528</h4>
+              <h4>Software Developer</h4>
               <h5>Nov 2016 - Aug 2018 · 1 yr 10 mos</h5>
               <p><em>Studio 528</em></p>
             </div>
