--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Skills</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -79,34 +80,6 @@
           <p>I am an experienced software developer. My main strength is Python, but I'm also very familiar with other languages and databases such as Ruby, JavaScript, C++, Java, SQL server, MySql, PostgreSQL, MongoDB etc. I have a Computer Science degree. I consider myself an employee with great communication skills and great team-working spirit. Besides that, throughout the years I've proven to be a very punctual, hard-working and determined person. As for my programming skills, I am known for my ability to quickly and successfully solve different problems or errors. I code everyday, sometime on my freelance jobs, and the rest of the time on my own projects. As of now I am very much interested and simultaneously excited to be working in AI and Machine Learning projects. I am very passionate about my profession and I'm willing to work with people as passionate as me.</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Python Developer &amp; Python Instructor.</h3>
-            <p class="fst-italic">
-              Choices ... We cannot go back. That’s why it’s hard to choose. You have to make the right choice. As long as you don’t choose, everything remains possible.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://fiqiri.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+355686788926</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tirana, Albania</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>email:</strong> <span>fiqiripoleshi@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
-
-          </div>
-        </div>
 
       </div>
     </section><!-- End About Section -->
@@ -127,14 +100,14 @@
             <div class="progress">
               <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Databases <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
@@ -282,25 +255,82 @@
 
     <!-- ======= Portfolio Section ======= -->
 
-  <footer id="footer">
-    <div class="container">
-      <div class="social-links">
-        <a href="https://www.upwork.com/freelancers/~0161f368b327476d17" class="upwork"><i class="bx bxl-skype"></i></a>
-        <a href="https://www.linkedin.com/in/fiqiri-poleshi-2a6a34b7/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://www.facebook.com/alkripton/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/fiqiri_poleshi/" class="instagram"><i class="bx bxl-instagram"></i></a>
+
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>Python Developer &amp; Python Instructor.</h3>
+            <p class="fst-italic">
+              Choices ... We cannot go back. That’s why it’s hard to choose. You have to make the right choice. As long as you don’t choose, everything remains possible.
+            </p>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="info">
+                  <div class="address">
+                    <i class="bi bi-geo-alt"></i>
+                    <h4>Location:</h4>
+                    <p>Tirana, Albania</p>
+                  </div>
+
+                  <div class="email">
+                    <i class="bi bi-envelope"></i>
+                    <h4>Email:</h4>
+                    <p>fiqiripoleshi@gmail.com</p>
+                  </div>
+
+                  <div class="phone">
+                    <i class="bi bi-phone"></i>
+                    <h4>Call:</h4>
+                    <p>+355686788926</p>
+                  </div>
+                </div>
+
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="row mt-1">
+
+
+          </div>
+
+          <div class="col-lg-8 mt-5 mt-lg-0">
+
+          </div>
+
+        </div>
+
       </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Fiqiri Poleshi</span></strong>. All Rights Reserved
+    </section><!-- End Contact Section -->
+    <footer id="footer">
+      <div class="container">
+        <div class="social-links">
+          <a href="https://www.upwork.com/freelancers/~0161f368b327476d17" class="upwork"><i class="bx bxl-skype"></i></a>
+          <a href="https://www.linkedin.com/in/fiqiri-poleshi-2a6a34b7/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/alkripton/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/fiqiri_poleshi/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        </div>
+        <div class="copyright">
+          &copy; Copyright <strong><span>Fiqiri Poleshi</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: [license-url] -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
