--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="progress">
               <span class="skill">MongoDB <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -131,7 +131,7 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
@@ -289,7 +289,7 @@
                   <div class="phone">
                     <i class="bi bi-phone"></i>
                     <h4>Call:</h4>
-                    <p>+355686788926</p>
+                    <p><a href="#">+355686788926</a></p>
                   </div>
                 </div>
 
