--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                   <div class="phone">
                     <i class="bi bi-phone"></i>
                     <h4>Call:</h4>
-                    <p><a href="#">+355686788926</a></p>
+                    <p><a href="tel:+355686788926">+355686788926</a></p>
                   </div>
                 </div>
 
